--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ file_in/*
 file_out/*
 !file_out/.gitkeep
 
+# Test files
+tests/test_files/*
+!tests/test_files/.gitkeep
+
 # Python
 __pycache__/
 *.py[cod]
